test_files/s_cproc/macro_define/test_001/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro_define/test_001/i.input:1:2: error: no macro name given in #define directive
 #define
  ^
